@@ -5,6 +5,9 @@ IN DEVELOPMENT
     * Merge directives can now be supplied as input to `merge` and `pull`,
       like bundles can.  (Aaron Bentley)
 
+    * ``selftest`` has new short options ``-f`` and ``-1``.  (Martin
+      Pool)
+
   INTERNALS:
 
     * bzrlib API compatability with 0.8 has been dropped, cleaning up some
